--- a/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
@@ -1,5 +1,7 @@
 ---
 - hosts: all
+  vars_files:
+    - "inventories/sample/group_vars/primary.yaml"
   tasks:
     - name: "Upgrade errata | Create password tempfile"
       tempfile:
