Added call to school configurator and wait for it to finish. Added some school parameters.

--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/primary.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/primary.yaml
@@ -2,4 +2,7 @@
 # Apps:
 force_package_upgrade: "false"
 install_apps:
-    - "ucsschool"
+  - "ucsschool"
+school_parameters:
+  OUdisplayname: 'Name der Schule'
+  schoolOU: 'schulname'
