--- a/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
@@ -39,13 +39,65 @@
       copy:
         dest: "{{ var_temp_file.path }}"
         content: "univention"
-    - name: "Install apps |  Install Packages"
+    - name: "Install apps | Install Packages"
       include_role:
         name: "univention.ucs_roles.install_packages"
       vars:
         install_packages_temp_pw_file: "{{ var_temp_file }}"
         install_packages_force_package_upgrade: "{{ force_package_upgrade }}"
         install_packages_install_apps: "{{ install_apps }}"
+    # NOTE we don't let it fail: so we have a chance to process (and print!) the result
+    - name: "Install apps | Configure ucs@school"
+      ansible.builtin.uri:
+        # this request will be executed at the target
+        url: "https://127.0.0.1/univention/command/schoolinstaller/install"
+        method: 'POST'
+        validate_certs: false
+        url_username: "Administrator"
+        url_password: "univention"
+        force_basic_auth: true
+        body_format: 'json'
+        body:
+          options:
+            setup: "singlemaster"
+            createDemo: false
+            username: "Administrator"
+            password: ""
+            master: "primary.basis-pilot.de"
+            OUdisplayname: "{{ school_parameters.OUdisplayname }}"
+            schoolOU: "{{ school_parameters.schoolOU }}"
+            server_type: "educational"
+            nameEduServer: ""
+      register: config_result
+      failed_when: false
+    # when failed: print full result and fail.
+    - name: "Install apps | Print configuration result"
+      ansible.builtin.debug:
+        msg: "{{ config_result }}"
+      failed_when: config_result['status']|int != 200 or config_result['json']['status']|int != 200
+      when: config_result['status']|int != 200 or config_result['json']['status']|int != 200
+    - name: "Install apps |  Wait for ucsschool configuration to finish"
+      ansible.builtin.uri:
+        url: "https://127.0.0.1/univention/command/schoolinstaller/progress?preventCache={{ now()|regex_replace('[^0-9]','_') }}"
+        method: 'POST'
+        validate_certs: false
+        url_username: "Administrator"
+        url_password: "univention"
+        force_basic_auth: true
+        headers:
+          Content-Type: 'application/json'
+          X-Xsrf-Protection: "{{ config_result['cookies']['UMCSessionId'] }}"
+          Cookie: "{{ config_result['cookies_string'] }}"
+        body: '{"options":{}}'
+      register: wait_result
+      until: wait_result['status']|int != 200 or wait_result['json']['status']|int != 200 or wait_result['json']['result']['finished']
+      # This checks every 10 secs, and limits the overall time to 10 minutes.
+      delay: 10
+      retries: 60
+      # FIXME: add a notify handler that restarts the UMC server
+    - name: "Install apps | Print last wait result"
+      ansible.builtin.debug:
+        msg: "{{ wait_result }}"
     - name: "Install apps | Remove admin pw"
       file:
         dest: "{{ var_temp_file.path }}"
