--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
@@ -2,5 +2,24 @@ ansible_connection: "ssh"
 ansible_ssh_user: "root"
 ansible_ssh_pass: "univention"
 
-upgrade_version: "5.0-3"
+upgrade_version: "5.0-5"
 update_server: "updates.software-univention.de"
+
+# Vars are overridden by default, so keep them in a 'global' dict here.
+# Whenever a task needs global *and* per-host config, it can include both
+# vars files and *MUST* merge the needed variables.
+global:
+  install_apps:
+    - 'prometheus-node-exporter'
+  # will be overridden by school_parameters in primary.yaml
+  school_parameters:
+    setup: 'singlemaster'
+    createDemo: false
+    username: 'Administrator'
+    # Next two: needed when doing join scripts on non-master roles?
+    password: ''
+    master: ''
+    OUdisplayname: 'Pilot-Schule'
+    schoolOU: 'pilotschule'
+    server_type: 'educational'
+    nameEduServer: ''
