Fix: add quotes around Jinja expression.

--- a/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
@@ -79,7 +79,7 @@
         force_basic_auth: true
         body_format: 'json'
         body:
-          options: {{ global.school_parameters|default({})|combine(school_parameters|default({})) }}
+          options: "{{ global.school_parameters|default({})|combine(school_parameters|default({})) }}"
       register: config_result
       failed_when: false
     # when failed: print full result and fail.
