--- a/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/playbook.yaml
@@ -51,6 +51,7 @@
       vars:
         install_packages_temp_pw_file: "{{ var_temp_file }}"
         install_packages_force_package_upgrade: "{{ force_package_upgrade }}"
+        # global apps before host-specific ones
         install_packages_install_apps: "{{ global.install_apps|default([]) + install_apps|default([]) }}"
     - name: "Install apps | Remove admin pw"
       file:
@@ -68,7 +69,7 @@
   tasks:
     # NOTE we don't let it fail: so we have a chance to process (and print!) the result
     # FIXME: this task would make sense to be refactored in an ucs_call_umcp role or similar
-    - name: "Install apps | Configure ucs@school"
+    - name: "Configure ucs@school | Invoke configuration"
       ansible.builtin.uri:
         # this request will be executed at the target
         url: "https://127.0.0.1/univention/command/schoolinstaller/install"
@@ -83,12 +84,13 @@
       register: config_result
       failed_when: false
     # when failed: print full result and fail.
-    - name: "Install apps | Print configuration result"
+    - name: "Configure ucs@school | Print configuration result on failure"
       ansible.builtin.debug:
         msg: "{{ config_result }}"
       failed_when: config_result['status']|int != 200 or config_result['json']['status']|int != 200
+      # Comment this away to print the result even when it did not fail
       when: config_result['status']|int != 200 or config_result['json']['status']|int != 200
-    - name: "Install apps |  Wait for ucsschool configuration to finish"
+    - name: "Configure ucs@school | Wait for configuration to finish"
       ansible.builtin.uri:
         url: "https://127.0.0.1/univention/command/schoolinstaller/progress?preventCache={{ now()|regex_replace('[^0-9]','_') }}"
         method: 'POST'
@@ -103,11 +105,13 @@
         body: '{"options":{}}'
       register: wait_result
       until: wait_result['status']|int != 200 or wait_result['json']['status']|int != 200 or wait_result['json']['result']['finished']
-      # This checks every 15 secs, and limits the overall time to three hours: yes we need that :-(
+      # This checks every 15 secs, and limits the overall time to three hours
       delay: 15
       retries: 720
       # FIXME: add a notify handler that restarts the UMC server
-    - name: "Install apps | Print last wait result"
+    # FIXME: this should print only relevant fields of the result: percentage, last executed step, result code
+    # or even better: do not print anything when we're sure it works!
+    - name: "Configure ucs@school | Print last result"
       ansible.builtin.debug:
         msg: "{{ wait_result }}"
 
