Reworked app install order

--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/backups.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/backups.yaml
@@ -9,3 +9,4 @@ install_apps:
 # FIXME: parameters for letsencrypt
 # FIXME: parameters for selfservice
 # FIXME: parameters for keycloak
+server_role: 'backup'
