Fix ucsschool installation mode.

--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
@@ -14,7 +14,7 @@ global:
     - 'prometheus-node-exporter'
   # will be overridden by school_parameters in primary.yaml
   school_parameters:
-    setup: 'singlemaster'
+    setup: 'multiserver'
     createDemo: false
     username: 'Administrator'
     # Next two: needed when doing join scripts on non-master roles?
