Added generic support for app configuration (univention-app, ucr, and service restart) plus config for letsencrypt

--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
@@ -24,3 +24,16 @@ global:
     schoolOU: 'pilotschule'
     server_type: 'educational'
     nameEduServer: ''
+  # For app configuration, we expect this structure. Currently no need to use
+  # this here; it would apply to all hosts where the given app is installed.
+#  configure_apps:
+#    appname:
+#      app_config:
+#        "configname": "config value"
+#        "otherconfig":  "other value"
+#      ucr_config:
+#        "appname/some/var": "some value"
+#        "appname/other/var": "other value"
+#      restart:
+#        - "service1"
+#        - "service2"
